[package]
name = "assignment-2-solution"
version = "0.3.0"
edition = "2024"

# You cannot add new dependencies unless explicitly allowed on the Assignment Forum.

[dependencies]
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
bytes = "1.11"
bincode = { version = "2.0", features = ["serde"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
log = "0.4"
async-channel = "2.5"
base64 = "0.22"
derive_more = {version = "2.0.1", features = ["full"] }
serde-big-array = "0.5"

[lib]
name = "assignment_2_solution"
path = "src/lib.rs"

# You can uncomment the following lines if you want your release build to be more optimized
# (but it shouldn't be necessary).
# [profile.release]
# lto = true
# codegen-units = 1

[lints.rust]
unsafe_code = "forbid"
