[package]
name = "assignment-2-test-utils"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
ntest = "0.9"
tempfile = "3.23"
env_logger = "0.11"
log = "0.4"
assignment-2-solution = { path = "../solution" }
uuid = { version = "1.18", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"
async-trait = "0.1"
async-channel = "2.5"
futures = "0.3"
rand = "0.9"
bincode = { version = "2.0", features = ["serde"] }
serde-big-array = "0.5"


[lib]
name = "assignment_2_test_utils"
path = "lib.rs"
